Fix vertical alignment of tracker "add comment" buttons + canned response line

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -1174,6 +1174,7 @@ div.et2_link_entry input.ui-autocomplete-input {
 
 .et2_link_to.et2_toolbar {
     margin-top: 10px !important;
+	border-bottom: none;
 }
 
 .et2_link_to.et2_toolbar div.et2_link_entry input.ui-autocomplete-input {
